# job-application

./: .gitignore  README.md  job-application.cabal
src/: JobApplication.hs  Main.hs
src/JobApplication/: API.hs  Client.hs  Database.hs  Server.hs  Types.hs
test/JobApplication/: JobApplicationSpec.hs
