name: job-application
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: simple job application endpoint
description:  simple job application endpoint
category: web
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/job-application

library
  hs-source-dirs: src
  exposed-modules:
      JobApplication
  build-depends:
      base ==4.*
    , acid-state
    , aeson
    , either
    , mtl
    , safecopy
    , servant >= 0.4
    , servant-client >= 0.4
    , servant-server >= 0.4
    , text
    , transformers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
  ghc-prof-options: -auto-all -prof
  ghc-options: -Wall

executable job-application
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
      base -any
    , job-application -any
    , acid-state
    , aeson
    , either
    , mtl
    , safecopy
    , servant >= 0.4
    , servant-client >= 0.4
    , servant-server >= 0.4
    , text
    , transformers
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , job-application -any
    , hspec ==2.*
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      Job.Application
      Job.ApplicationSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
